--- a/scss/all.scss
+++ b/scss/all.scss
@@ -325,6 +325,17 @@
     }
   }
 
+  .movies{
+    .actions{
+      justify-content: flex-start;
+    }
+    .showing-list{
+      margin-bottom: 50px;
+       @include v.phone-width {
+        margin-bottom: 20px;
+       }
+    }
+  }
   .movie-info {
     .movie-item {
       &:first-of-type {
@@ -354,6 +365,7 @@
     }
   }
 
+  
   .introduction {
     line-height: 1.8;
     @extend %weight300;
@@ -371,8 +383,8 @@
   }
 
   .booking-history {
-    .actions-btn {
-      width: 12em;
+    .actions{
+      justify-content: flex-start;
     }
 
     .item {
@@ -515,6 +527,7 @@
   }
 
   .news {
+    .hr-line{margin: 1.1em 0;}
     .event {
       margin-bottom: 40px;
 
@@ -542,11 +555,8 @@
     .actions {
       align-items: center;
       justify-content: flex-start;
-
-      .actions-btn {
-        margin-right: 20px;
-      }
-
+      
+      .actions-btn{margin-right: 20px;}
       .back {
         width: 100%;
         height: fit-content;
@@ -567,7 +577,7 @@
       }
 
       img {
-        border-radius: 5px;
+        border-radius: 10px;
       }
     }
 
@@ -590,6 +600,52 @@
       p {
         margin-bottom: 20px;
       }
+    }
+  }
+
+  .group-ticket{
+    .project{margin-bottom: 40px;hr{background-color: v.$yellow-bg-color;}}
+     .row-left {
+      padding-right: 40px;
+
+      @include v.pad-width {
+        padding-right: 0px;
+      }
+
+      @include v.phone-width {
+        padding-right: 0px;
+      }
+
+      img {
+        border-radius: 10px;
+      }
+    }
+
+    .sub-title {
+      @include v.pad-width {
+        margin-top: 20px;
+      }
+
+      @include v.phone-width {
+        margin-top: 20px;
+
+      }
+    }
+
+    .hr-line {
+      width: 100px;
+    }
+
+    .new-content {
+      p {
+        margin-bottom: 20px;
+      }
+    }
+  }
+
+  .about{
+    .actions{
+      justify-content: flex-start;
     }
   }
 
@@ -624,14 +680,18 @@
         padding-left: 0;
       }
     }
+    .actions{
+      justify-content: flex-start;
+    }
 
     .actionbtn {
       display: inline-flex;
       margin-top: 0;
       align-items: flex-end;
-      height: 82px;
-      max-height: 82px;
+      height: 80px;
+      max-height: 80px;
       justify-content: space-between;
+      @extend %weight600;
 
       @include v.phone-width {
         flex-direction: column;
@@ -650,7 +710,7 @@
         height: 50px;
         padding: 10px 0;
         background-color: v.$blue-bg-color;
-
+        
         @include v.phone-width {
           margin-bottom: 15px;
         }
@@ -704,6 +764,9 @@
   }
 
   .booking {
+    .actions{
+      justify-content: flex-start;
+    }
     .content-row {
       margin-bottom: 80px;
     }
@@ -1202,56 +1265,29 @@
     }
 
     .row-right {
-      border: 1px solid #818181;
-      border-radius: 10px;
-      padding: 20px 30px;
-      height: fit-content;
 
       >.material-icons {
         width: 100%;
         text-align: right;
         color: v.$yellow-bg-color;
       }
-
-      .note {
-        margin-bottom: 5px;
-        @extend %weight600;
-
-        .material-icons {
-          font-size: 2rem;
-          margin-right: 5px;
-        }
-      }
-
-      ul {
-        margin-left: 40px;
-      }
-
-      li {
-        list-style: decimal-leading-zero;
-
-        &:last-of-type {
-          margin-bottom: 20px;
-        }
-      }
     }
   }
 
-  .book-step-btn {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-
+  .actions {    
     button {
       width: fit-content;
       color: #000;
       display: flex;
       align-items: center;
+      
 
       &.next {
         background-color: v.$btn-primary;
-        margin-left: 10px;
-
+        border-color: v.$btn-primary;
+        color: #282828;
+        @extend %weight600;
+        
         .material-icons {
           margin-left: 10px
         }
@@ -1259,7 +1295,9 @@
 
       &.back {
         @include v.bg-opacity(v.$blue-bg-color, 0.8);
-        margin-right: 10px;
+        border-color: #00abf2cc;
+        color: #282828;
+        @extend %weight600;
 
         .material-icons {
           margin-right: 10px
@@ -1498,7 +1536,7 @@
       .info-item{
         display: inline-block;
         width: 30%;
-        margin: 0 30px 30px 0;
+        margin: 0 30px 40px 0;
         label{color: v.$yellow-bg-color;margin-bottom: 5px;}
       }
       .precautions{
@@ -1513,13 +1551,42 @@
       .container-checkbox{
         font-weight: normal;
         width: fit-content;
+      
        a{@extend %weight600;margin: 0 5px;}
         .checkmark{
         top: 5px;
+        &:after{
+          left: 4px;
+          top: 0px;
+        }
       }
       }
      
     }
+  }
+  .book-tickets-4{
+    .book-done{
+      display: flex;
+      align-items: center;
+      margin: 50px 0;
+      @extend %weight600;
+       @include v.phone-width {
+        flex-direction: column;
+      }
+      .done{
+        display: flex;
+        align-items: center;
+        padding: 5px 15px;
+        background-color: v.$green-bg-color;
+        margin-right: 30px;
+         @include v.phone-width {
+        margin-right: 0;
+        margin-bottom: 15px;
+      }
+        .material-icons{margin-right: 10px;}
+      }
+    }
+
   }
 
 }
