--- a/scss/global.scss
+++ b/scss/global.scss
@@ -18,7 +18,7 @@ html {
   line-height: 1.6;
   font-family: Microsoft JhengHei, Arial, sans-serif;
   font-style: normal;
- 
+
   &.no-scroll {
     overflow: hidden;
   }
@@ -200,15 +200,17 @@ select {
   padding: 0 15px;
   width: 100%;
   color: v.$font-primary;
-    option {
+
+  option {
     background: #3a3a3a;
     color: v.$font-primary;
     border: 1px solid v.$font-secondary;
-   :hover{
-    background-color: transparent;
-   }
+
+    :hover {
+      background-color: transparent;
+    }
   }
-  
+
 }
 
 button,
@@ -344,17 +346,22 @@ li {
 /* other share */
 :focus {
   outline-width: 0px;
-} 
+}
+
 :-moz-focusring {
   outline: 2px dotted #81818156;
 }
-input:focus,select:focus{
+
+input:focus,
+select:focus {
   box-shadow: 0 0 2px 2px #81818156;
 }
-input:-internal-autofill-selected{
+
+input:-internal-autofill-selected {
   -webkit-box-shadow: 0 0 0px 100px #3a3a3a inset;
   -webkit-text-fill-color: #Fff;
 }
+
 ::placeholder {
   color: #ffffff3d;
 }
@@ -385,7 +392,7 @@ input:-internal-autofill-selected{
   height: 1px;
   background-color: v.$primary;
   border: none;
-  margin: 1.1em 0;
+  margin: 1.4em 0;
 }
 
 .mul-ellipsis-4 {
@@ -431,49 +438,74 @@ input:-internal-autofill-selected{
 }
 
 // JQ datepicker
-.ui-datepicker-month,.ui-datepicker-year{
+.ui-datepicker-month,
+.ui-datepicker-year {
   height: fit-content;
-  border:none;
+  border: none;
   background-color: #3a3a3a;
 }
-.ui-widget-header{
+
+.ui-widget-header {
   background: #3a3a3a;
 }
-.ui-datepicker .ui-datepicker-prev, .ui-datepicker .ui-datepicker-next{
+
+.ui-datepicker .ui-datepicker-prev,
+.ui-datepicker .ui-datepicker-next {
   top: 3px;
 }
-.ui-widget-header .ui-icon{
+
+.ui-widget-header .ui-icon {
   background-image: url('data:image/svg+xml;utf8,<svg width="10" height="13" viewBox="0 0 10 13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.286023 7.03462L8.95386 12.8845C9.05389 12.952 9.17095 12.9915 9.29236 12.9988C9.41377 13.006 9.53492 12.9808 9.64267 12.9258C9.75042 12.8707 9.84067 12.788 9.90365 12.6866C9.96664 12.5851 9.99996 12.4688 10 12.3502V0.65042C10.0001 0.531782 9.96685 0.415385 9.90391 0.313844C9.84098 0.212302 9.75073 0.12949 9.64296 0.074381C9.53519 0.019272 9.414 -0.00603138 9.29253 0.00121319C9.17106 0.00845776 9.05394 0.0479739 8.95386 0.115479L0.286023 5.96538C0.197717 6.02546 0.125599 6.10544 0.0758019 6.19852C0.0260045 6.2916 0 6.39502 0 6.5C0 6.60498 0.0260045 6.7084 0.0758019 6.80148C0.125599 6.89456 0.197717 6.97454 0.286023 7.03462V7.03462Z" fill="white"/></svg>');
-  
+
 }
-.ui-icon-circle-triangle-e{
+
+.ui-icon-circle-triangle-e {
   background-position: 0px 2px;
   transform: rotate(180deg);
 }
-.ui-icon-circle-triangle-w{
+
+.ui-icon-circle-triangle-w {
   background-position: 0px 2px;
 }
-.ui-datepicker-next-hover,.ui-datepicker-prev-hover{
-  background: transparent!important;
-  border:1px solid transparent!important;
+
+.ui-datepicker-next-hover,
+.ui-datepicker-prev-hover {
+  background: transparent !important;
+  border: 1px solid transparent !important;
   right: 3px;
 }
-.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active{
+
+.ui-state-default,
+.ui-widget-content .ui-state-default,
+.ui-widget-header .ui-state-default,
+.ui-button,
+html .ui-button.ui-state-disabled:hover,
+html .ui-button.ui-state-disabled:active {
   border: 1px solid transparent;
-  background:transparent;
-}
-.ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight{
-  border: 1px solid #fcc90054;
-  background:#fcc90054;
-  color: #000;
-}
-.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active, a.ui-button:active, .ui-button:active, .ui-button.ui-state-active:hover{
-    border: 1px solid v.$red-bg-color;
-    background: v.$red-bg-color;
-    color: #fff;
+  background: transparent;
 }
 
-.ui-datepicker td span, .ui-datepicker td a{
+.ui-state-highlight,
+.ui-widget-content .ui-state-highlight,
+.ui-widget-header .ui-state-highlight {
+  border: 1px solid #fcc90054;
+  background: #fcc90054;
+  color: #000;
+}
+
+.ui-state-active,
+.ui-widget-content .ui-state-active,
+.ui-widget-header .ui-state-active,
+a.ui-button:active,
+.ui-button:active,
+.ui-button.ui-state-active:hover {
+  border: 1px solid v.$red-bg-color;
+  background: v.$red-bg-color;
+  color: #fff;
+}
+
+.ui-datepicker td span,
+.ui-datepicker td a {
   text-align: center;
 }
 
@@ -564,7 +596,7 @@ nav {
       -webkit-transition: all 0.45s ease-out;
       -moz-transition: all 0.45s ease-out;
       -o-transition: all 0.45s ease-out;
-      transition: all 0.45s ease-out; 
+      transition: all 0.45s ease-out;
       z-index: 999;
     }
 
@@ -650,7 +682,7 @@ nav {
       flex-direction: column;
       overflow: hidden;
       visibility: hidden;
-      transition: visibility 0.5s linear; 
+      transition: visibility 0.5s linear;
 
       @include v.phone-width {
         position: static;
@@ -924,306 +956,351 @@ nav {
 
 /* share style */
 .section-box {
-  padding: 0 15px;
+  padding: 0 10px;
 }
-  .main-title {
-    width: 100%;
-    margin-bottom: 30px;
 
-    div {
-      margin: 0;
+.main-title {
+  width: 100%;
+  margin-bottom: 30px;
 
-      &:nth-of-type(1) {
-        @extend %weight300;
+  div {
+    margin: 0;
 
-        &::before {
-          content: "";
-          display: inline-block;
-          width: 6px;
-          height: 6px;
-          border-radius: 50%;
-          background-color: v.$primary;
-          margin-right: 10px;
-          margin-bottom: 3px;
-        }
-      }
-
-      &:nth-of-type(2) {
-        color: v.$primary;
-        margin-left: 15px;
-        @extend %weight600;
-      }
-    }
-  }
-
-  .primary-title {
-    margin-bottom: 20px;
-
-    &:after {
-      content: "|";
-      position: relative;
-      top: -2px;
-      margin-left: 10px;
-    }
-  }
-
-  .sub-title {
-    margin-bottom: 20px;
-    font-size: 1.1rem;
-    @extend %weight600;
-  }
-
-  .movie-title {
-    margin-top: 10px;
-    @extend %weight600;
-    width: 100%;
-
-    span {
+    &:nth-of-type(1) {
       @extend %weight300;
-      display: block;
-      color: v.$font-secondary;
-      line-height: 1.3;
+
+      &::before {
+        content: "";
+        display: inline-block;
+        width: 6px;
+        height: 6px;
+        border-radius: 50%;
+        background-color: v.$primary;
+        margin-right: 10px;
+        margin-bottom: 3px;
+      }
+    }
+
+    &:nth-of-type(2) {
+      color: v.$primary;
+      margin-left: 15px;
+      @extend %weight600;
+    }
+  }
+}
+
+.primary-title {
+  margin-bottom: 20px;
+
+  &:after {
+    content: "|";
+    position: relative;
+    top: -2px;
+    margin-left: 10px;
+  }
+}
+
+.sub-title {
+  margin-bottom: 20px;
+  font-size: 1.1rem;
+  @extend %weight600;
+}
+
+.movie-title {
+  margin-top: 10px;
+  @extend %weight600;
+  width: 100%;
+
+  span {
+    @extend %weight300;
+    display: block;
+    color: v.$font-secondary;
+    line-height: 1.3;
+  }
+}
+
+.movie-level {
+  margin: 10px 0;
+  padding: 2px 10px;
+  display: inline-block;
+  color: v.$secondary;
+  text-align: center;
+  @extend %weight600;
+
+}
+
+.content-row {
+  display: flex;
+  flex-wrap: wrap;
+
+  .row {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+
+  .icon-row {
+    position: relative;
+
+    input {
+      padding-left: 60px;
+      color: v.$font-primary;
+    }
+
+    .material-icons {
+      position: absolute;
+      left: 15px;
+      top: 39px;
+      color: v.$bg-color;
+      font-size: 30px;
+      cursor: pointer;
+
+      &.pwd-on {
+        color: #C7BA9B;
+      }
+    }
+  }
+}
+
+.row-1 {
+  @include v.row-width(10%);
+
+  @include v.pad-width {
+    flex-basis: 50%;
+  }
+
+  @include v.phone-width {
+    flex-basis: 100%;
+  }
+}
+
+.row-2 {
+  @include v.row-width(20%);
+
+  @include v.pad-width {
+    flex-basis: 33.33%;
+    width: 33.33%;
+  }
+
+  @include v.phone-width {
+    flex-basis: 50%;
+    width: 50%;
+  }
+
+  @include v.mini-width {
+    flex-basis: 100%;
+    width: 100%;
+  }
+}
+
+.row-3 {
+  @include v.row-width(30%);
+
+  @include v.pad-width {
+    flex-basis: 50%;
+  }
+
+  @include v.phone-width {
+    flex-basis: 100%;
+  }
+}
+
+.row-3-1 {
+  @include v.row-width(33.33%);
+
+  @include v.pad-width {
+    flex-basis: 50%;
+  }
+
+  @include v.phone-width {
+    flex-basis: 100%;
+  }
+}
+
+.row-4 {
+  @include v.row-width(40%);
+
+  @include v.pad-width {
+    flex-basis: 100%;
+    width: 100%;
+  }
+
+  @include v.phone-width {
+    flex-basis: 100%;
+    width: 100%;
+  }
+}
+
+.row-7 {
+  @include v.row-width(70%);
+
+  @include v.pad-width {
+    flex-basis: 100%;
+    width: 100%;
+  }
+
+  @include v.phone-width {
+    flex-basis: 100%;
+    width: 100%;
+  }
+}
+
+.row-6 {
+  @include v.row-width(60%);
+
+  @include v.pad-width {
+    flex-basis: 100%;
+    width: 100%;
+  }
+
+  @include v.phone-width {
+    flex-basis: 100%;
+    width: 100%;
+  }
+}
+
+.row-5 {
+  @include v.row-width(50%);
+
+  @include v.pad-width {
+    flex: 100%;
+    width: 100%;
+  }
+
+  @include v.phone-width {
+    flex: 100%;
+    width: 100%;
+  }
+}
+
+.row-8 {
+  @include v.row-width(80%);
+
+  @include v.pad-width {
+    flex: 100%;
+    width: 100%;
+  }
+
+  @include v.phone-width {
+    flex: 100%;
+    width: 100%;
+  }
+}
+
+
+.row-9 {
+  @include v.row-width(90%);
+}
+
+.section {
+  color: v.$font-primary;
+  max-width: v.$max-width;
+  margin: 50px auto 50px auto;
+
+  &:last-of-type {
+    margin-bottom: 150px;
+
+    @include v.pad-width {
+      margin-bottom: 90px;
+    }
+
+    @include v.phone-width {
+      margin-bottom: 50px;
     }
   }
 
-  .movie-level {
-    margin: 10px 0;
-    padding: 2px 10px;
-    display: inline-block;
-    color: v.$secondary;
-    text-align: center;
-    @extend %weight600;
-    
-  }
-
-  .content-row {
-    display: flex;
-    flex-wrap: wrap;
-
-      .row {
-        width: 100%;
-        margin-bottom: 15px;
-      }
-
-      .icon-row {
-        position: relative;
-
-        input {
-          padding-left: 60px;
-          color: v.$font-primary;
-        }
-
-        .material-icons {
-          position: absolute;
-          left: 15px;
-          top: 39px;
-          color: v.$bg-color;
-          font-size: 30px;
-          cursor: pointer;
-
-          &.pwd-on {
-            color: #C7BA9B;
-          }
-        } 
-      }
-    }
-    .row-1 {
-        @include v.row-width(10%);
-
-        @include v.pad-width {
-          flex-basis: 50%;
-        }
-
-        @include v.phone-width {
-          flex-basis: 100%;
-        }
-      }
-
-      .row-2 {
-        @include v.row-width(20%);
-
-        @include v.pad-width {
-          flex-basis: 33.33%;
-          width: 33.33%;
-        }
-
-        @include v.phone-width {
-          flex-basis: 50%;
-          width: 50%;
-        }
-
-        @include v.mini-width {
-          flex-basis: 100%;
-          width: 100%;
-        }
-      }
-
-      .row-3 {
-        @include v.row-width(30%);
-
-        @include v.pad-width {
-          flex-basis: 50%;
-        }
-
-        @include v.phone-width {
-          flex-basis: 100%;
-        }
-      }
-
-      .row-3-1 {
-        @include v.row-width(33.33%);
-
-        @include v.pad-width {
-          flex-basis: 50%;
-        }
-
-        @include v.phone-width {
-          flex-basis: 100%;
-        }
-      }
-
-      .row-4 {
-        @include v.row-width(40%);
-        @include v.pad-width {
-          flex-basis: 100%;
-          width: 100%;
-        }
-
-        @include v.phone-width {
-          flex-basis: 100%;
-          width: 100%;
-        }
-      }
-
-      .row-7 {
-        @include v.row-width(70%);
-
-        @include v.pad-width {
-          flex-basis: 100%;
-          width: 100%;
-        }
-
-        @include v.phone-width {
-          flex-basis: 100%;
-          width: 100%;
-        }
-      }
-
-      .row-6 {
-        @include v.row-width(60%);
-        @include v.pad-width {
-          flex-basis: 100%;
-          width: 100%;
-        }
-
-        @include v.phone-width {
-          flex-basis: 100%;
-          width: 100%;
-        }
-      }
-
-      .row-5 {
-        @include v.row-width(50%);
-
-        @include v.pad-width {
-          flex: 100%;
-          width: 100%;
-        }
-
-        @include v.phone-width {
-          flex: 100%;
-          width: 100%;
-        }
-      }
-
-      .row-8 {
-        @include v.row-width(80%);
-         @include v.pad-width {
-          flex: 100%;
-          width: 100%;
-        }
-
-        @include v.phone-width {
-          flex: 100%;
-          width: 100%;
-        }
-      }
-
-
-      .row-9 {
-        @include v.row-width(90%);
-      }
-
-  .section {
-    color: v.$font-primary;
-    max-width: v.$max-width;
-    margin: 50px auto 50px auto;
+  .content {
+    margin-bottom: 80px;
 
     &:last-of-type {
-      margin-bottom: 200px;
-      @include v.pad-width{
-        margin-bottom: 100px;
-      }
-      @include v.phone-width{
-        margin-bottom: 50px;
-      }
+      margin-bottom: 0;
+    }
+  }
+
+  .actions {
+    display: inline-flex;
+    margin: 40px 0;
+    width: 100%;
+    justify-content: center;
+
+    @include v.pad-width {
+      margin-bottom: 20px;
+
     }
 
-    .content {
-      margin-bottom: 80px;
+    @include v.phone-width {
+      margin-bottom: 20px;
     }
 
-    .actions {
-      display: inline-flex;
-      margin-bottom: 40px;
-      width: 100%;
-      
-      @include v.pad-width{
-        margin-bottom: 20px;
+    .actions-btn {
+      border-radius: 5px;
+      cursor: pointer;
+      border: 1px solid v.$yellow-bg-color;
+      color: v.$yellow-bg-color;
+      padding: 10px 5px;
+      text-align: center;
+      margin-right: 20px;
+      width: 12em;
+      justify-content: center;
 
+      @include v.pad-width {
+        width: 50%;
+        margin-right: 10px;
       }
-      @include v.phone-width{
-        margin-bottom: 20px;
 
+      @include v.phone-width {
+        width: 50%;
+        margin-right: 10px;
       }
 
-      .actions-btn {
-        border-radius: 5px;
-        cursor: pointer;
-        border: 1px solid v.$yellow-bg-color;
-        color: v.$yellow-bg-color;
-        padding: 10px 5px;
-        text-align: center;
-        margin-right: 20px;
-        width: 12em;
+      &:last-of-type {
+        margin-right: 0
+      }
 
-        @include v.pad-width{
-          width: 50%;
-        }
-        @include v.phone-width{
-          width: 50%;
-        }
-
-        &:last-of-type{
-          margin-right: 0
-        }
-
-        &.active {
-          @extend %weight600;
-          color: v.$secondary;
-          background-color: v.$yellow-bg-color;
-        }
+      &.active {
+        @extend %weight600;
+        color: v.$secondary;
+        background-color: v.$yellow-bg-color;
       }
     }
   }
 
+  .attention {
+    border: 1px solid #818181;
+    border-radius: 10px;
+    padding: 20px 30px;
+    height: fit-content;
+
+    .note {
+      margin-bottom: 10px;
+      @extend %weight600;
+
+      .material-icons {
+        font-size: 1.5rem;
+        margin-right: 5px;
+      }
+    }
+
+    ul {
+      margin-left: 40px;
+    }
+
+    li {
+      list-style: decimal-leading-zero;
+
+      &:last-of-type {
+        margin-bottom: 20px;
+      }
+    }
+  }
+}
 
 .actionbtn {
   text-align: center;
   margin-top: 80px;
 
-  button,div{
-    width: 100%; 
+  button,
+  div {
+    width: 100%;
     padding: 10px 30px;
     color: #fff;
     @extend %weight600;
@@ -1341,7 +1418,9 @@ footer {
     color: v.$secondary;
     padding: 0 10px;
     height: 45px;
-    &#confirmrule,&#lockpwd{
+
+    &#confirmrule,
+    &#lockpwd {
       height: auto;
     }
   }
@@ -1371,10 +1450,11 @@ footer {
         background-color: #006EBD;
         border: 1px solid #125578;
       }
+
       a {
         color: v.$primary;
       }
-    
+
     }
   }
 
@@ -1479,25 +1559,49 @@ footer {
     opacity: 1;
   }
 }
+
 // div table
-.table {display: table;border-collapse: collapse;width: 100%;}
-.table-tr {display: table-row;width: 100%;}
-.table-th {display: table-cell;height: 100%;text-align: center;vertical-align: middle;background-color:#818181;}
-.table-td {display: table-cell; height: 100%; text-align: center;vertical-align: middle;}
+.table {
+  display: table;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.table-tr {
+  display: table-row;
+  width: 100%;
+}
+
+.table-th {
+  display: table-cell;
+  height: 100%;
+  text-align: center;
+  vertical-align: middle;
+  background-color: #818181;
+}
+
+.table-td {
+  display: table-cell;
+  height: 100%;
+  text-align: center;
+  vertical-align: middle;
+}
 
 // 步驟條
-.step-bar{
+.step-bar {
   width: 100%;
   margin: 80px 0;
+
   @include v.phone-width {
-     margin: 40px 0;
+    margin: 40px 0;
   }
-  .progress{
+
+  .progress {
     display: flex;
     justify-content: space-around;
     counter-reset: step;
-    
-    li{
+
+    li {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -1505,61 +1609,74 @@ footer {
       position: relative;
       z-index: 0;
       text-align: center;
-       @include v.phone-width {
-           font-size: 0.9em;
-        }
 
-      &::before{
+      @include v.phone-width {
+        font-size: 0.9em;
+      }
+
+      &::before {
         content: counter(step);
         counter-increment: step;
         width: 40px;
         height: 40px;
-        line-height:40px;
+        line-height: 40px;
         border: 1px solid #818181;
         border-radius: 100%;
         text-align: center;
         background-color: #282828;
         margin-bottom: 10px;
         color: #818181;
-        
+
         @include v.phone-width {
-           width: 30px;
-           height: 30px;
-           line-height:30px;
+          width: 30px;
+          height: 30px;
+          line-height: 30px;
         }
       }
-      &::after{
+
+      &::after {
         content: '';
         position: absolute;
         width: 65%;
         height: 1px;
         background-color: #818181;
-        top:16px;
+        top: 16px;
         right: -33%;
         z-index: -1;
       }
-      &:last-child{
-        &::after{
+
+      &:last-child {
+        &::after {
           content: none;
         }
       }
-      &.active{
+
+      &.active {
         color: v.$yellow-bg-color;
-         @extend %weight600;
-        &::before{
-          border: 1px solid v.$yellow-bg-color;
-          background-color:v.$yellow-bg-color;
+        @extend %weight600;
+
+        &::before {
+          border-color:v.$yellow-bg-color;
+          background-color: v.$yellow-bg-color;
           color: #000;
         }
+        &:after{
+          background-color: v.$yellow-bg-color;
+        }
       }
-      &.finished{
+
+      &.finished {
         color: v.$yellow-bg-color;
-         @extend %weight600;
-        &::before{
-          content:'✓';
-          border: 1px solid v.$yellow-bg-color;
-          background-color:v.$yellow-bg-color;
+        @extend %weight600;
+
+        &::before {
+          content: '✓';
+          border-color:v.$yellow-bg-color;
+          background-color: v.$yellow-bg-color;
           color: #000;
+        }
+         &:after{
+          background-color: v.$yellow-bg-color;
         }
       }
     }
